src/expr/src/scalar/snapshots/mz_expr__scalar__func__array_array_concat.snap
---
source: src/expr/src/scalar/func.rs
expression: "#[sqlfunc(\n    output_type_expr = \"input_type_a.scalar_type.without_modifiers().nullable(true)\",\n    is_infix_op = true,\n    sqlname = \"||\",\n    propagates_nulls = false,\n    introduces_nulls = false\n)]\nfn array_array_concat<'a>(\n    a: Datum<'a>,\n    b: Datum<'a>,\n    temp_storage: &'a RowArena,\n) -> Result<Datum<'a>, EvalError> {\n    if a.is_null() {\n        return Ok(b);\n    } else if b.is_null() {\n        return Ok(a);\n    }\n    let a_array = a.unwrap_array();\n    let b_array = b.unwrap_array();\n    let a_dims: Vec<ArrayDimension> = a_array.dims().into_iter().collect();\n    let b_dims: Vec<ArrayDimension> = b_array.dims().into_iter().collect();\n    let a_ndims = a_dims.len();\n    let b_ndims = b_dims.len();\n    if a_ndims == 0 {\n        return Ok(b);\n    } else if b_ndims == 0 {\n        return Ok(a);\n    }\n    #[allow(clippy::as_conversions)]\n    if (a_ndims as isize - b_ndims as isize).abs() > 1 {\n        return Err(EvalError::IncompatibleArrayDimensions {\n            dims: Some((a_ndims, b_ndims)),\n        });\n    }\n    let mut dims;\n    match a_ndims.cmp(&b_ndims) {\n        Ordering::Equal => {\n            if &a_dims[1..] != &b_dims[1..] {\n                return Err(EvalError::IncompatibleArrayDimensions {\n                    dims: None,\n                });\n            }\n            dims = vec![\n                ArrayDimension { lower_bound : a_dims[0].lower_bound, length : a_dims[0]\n                .length + b_dims[0].length, }\n            ];\n            dims.extend(&a_dims[1..]);\n        }\n        Ordering::Less => {\n            if &a_dims[..] != &b_dims[1..] {\n                return Err(EvalError::IncompatibleArrayDimensions {\n                    dims: None,\n                });\n            }\n            dims = vec![\n                ArrayDimension { lower_bound : b_dims[0].lower_bound, length : b_dims[0]\n                .length + 1, }\n            ];\n            dims.extend(a_dims);\n        }\n        Ordering::Greater => {\n            if &a_dims[1..] != &b_dims[..] {\n                return Err(EvalError::IncompatibleArrayDimensions {\n                    dims: None,\n                });\n            }\n            dims = vec![\n                ArrayDimension { lower_bound : a_dims[0].lower_bound, length : a_dims[0]\n                .length + 1, }\n            ];\n            dims.extend(b_dims);\n        }\n    }\n    let elems = a_array.elements().iter().chain(b_array.elements().iter());\n    Ok(temp_storage.try_make_datum(|packer| packer.try_push_array(&dims, elems))?)\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect
)]
pub struct ArrayArrayConcat;
impl<'a> crate::func::binary::EagerBinaryFunc<'a> for ArrayArrayConcat {
    type Input1 = Datum<'a>;
    type Input2 = Datum<'a>;
    type Output = Result<Datum<'a>, EvalError>;
    fn call(
        &self,
        a: Self::Input1,
        b: Self::Input2,
        temp_storage: &'a mz_repr::RowArena,
    ) -> Self::Output {
        {
            if a.is_null() {
                return Ok(b);
            } else if b.is_null() {
                return Ok(a);
            }
            let a_array = a.unwrap_array();
            let b_array = b.unwrap_array();
            let a_dims: Vec<ArrayDimension> = a_array.dims().into_iter().collect();
            let b_dims: Vec<ArrayDimension> = b_array.dims().into_iter().collect();
            let a_ndims = a_dims.len();
            let b_ndims = b_dims.len();
            if a_ndims == 0 {
                return Ok(b);
            } else if b_ndims == 0 {
                return Ok(a);
            }
            #[allow(clippy::as_conversions)]
            if (a_ndims as isize - b_ndims as isize).abs() > 1 {
                return Err(EvalError::IncompatibleArrayDimensions {
                    dims: Some((a_ndims, b_ndims)),
                });
            }
            let mut dims;
            match a_ndims.cmp(&b_ndims) {
                Ordering::Equal => {
                    if &a_dims[1..] != &b_dims[1..] {
                        return Err(EvalError::IncompatibleArrayDimensions {
                            dims: None,
                        });
                    }
                    dims = vec![
                        ArrayDimension { lower_bound : a_dims[0].lower_bound, length :
                        a_dims[0].length + b_dims[0].length, }
                    ];
                    dims.extend(&a_dims[1..]);
                }
                Ordering::Less => {
                    if &a_dims[..] != &b_dims[1..] {
                        return Err(EvalError::IncompatibleArrayDimensions {
                            dims: None,
                        });
                    }
                    dims = vec![
                        ArrayDimension { lower_bound : b_dims[0].lower_bound, length :
                        b_dims[0].length + 1, }
                    ];
                    dims.extend(a_dims);
                }
                Ordering::Greater => {
                    if &a_dims[1..] != &b_dims[..] {
                        return Err(EvalError::IncompatibleArrayDimensions {
                            dims: None,
                        });
                    }
                    dims = vec![
                        ArrayDimension { lower_bound : a_dims[0].lower_bound, length :
                        a_dims[0].length + 1, }
                    ];
                    dims.extend(b_dims);
                }
            }
            let elems = a_array.elements().iter().chain(b_array.elements().iter());
            Ok(
                temp_storage
                    .try_make_datum(|packer| packer.try_push_array(&dims, elems))?,
            )
        }
    }
    fn output_type(
        &self,
        input_type_a: mz_repr::ColumnType,
        input_type_b: mz_repr::ColumnType,
    ) -> mz_repr::ColumnType {
        use mz_repr::AsColumnType;
        let output = input_type_a.scalar_type.without_modifiers().nullable(true);
        let propagates_nulls = crate::func::binary::EagerBinaryFunc::propagates_nulls(
            self,
        );
        let nullable = output.nullable;
        output
            .nullable(
                nullable
                    || (propagates_nulls
                        && (input_type_a.nullable || input_type_b.nullable)),
            )
    }
    fn introduces_nulls(&self) -> bool {
        false
    }
    fn is_infix_op(&self) -> bool {
        true
    }
    fn propagates_nulls(&self) -> bool {
        false
    }
}
impl std::fmt::Display for ArrayArrayConcat {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str("||")
    }
}
