src/expr/src/scalar/snapshots/mz_expr__scalar__func__array_length.snap
---
source: src/expr/src/scalar/func.rs
expression: "#[sqlfunc()]\nfn array_length<'a>(a: Array<'a>, b: i64) -> Result<Option<i32>, EvalError> {\n    let i = match usize::try_from(b) {\n        Ok(0) | Err(_) => return Ok(None),\n        Ok(n) => n - 1,\n    };\n    Ok(\n        match a.dims().into_iter().nth(i) {\n            None => None,\n            Some(dim) => {\n                Some(\n                    dim\n                        .length\n                        .try_into()\n                        .map_err(|_| EvalError::Int32OutOfRange(\n                            dim.length.to_string().into(),\n                        ))?,\n                )\n            }\n        },\n    )\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect
)]
pub struct ArrayLength;
impl<'a> crate::func::binary::EagerBinaryFunc<'a> for ArrayLength {
    type Input1 = Array<'a>;
    type Input2 = i64;
    type Output = Result<Option<i32>, EvalError>;
    fn call(
        &self,
        a: Self::Input1,
        b: Self::Input2,
        temp_storage: &'a mz_repr::RowArena,
    ) -> Self::Output {
        array_length(a, b)
    }
    fn output_type(
        &self,
        input_type_a: mz_repr::SqlColumnType,
        input_type_b: mz_repr::SqlColumnType,
    ) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::binary::EagerBinaryFunc::propagates_nulls(
            self,
        );
        let nullable = output.nullable;
        output
            .nullable(
                nullable
                    || (propagates_nulls
                        && (input_type_a.nullable || input_type_b.nullable)),
            )
    }
}
impl std::fmt::Display for ArrayLength {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str(stringify!(array_length))
    }
}
impl ArrayLength {
    pub const fn func_doc() -> crate::func::FuncDoc {
        crate::func::FuncDoc {
            unique_name: stringify!(array_length),
            category: "Uncategorized",
            signature: "array_length(a anyarray, b int8) -> int4?",
            description: "",
            ..crate::func::FuncDoc::default()
        }
    }
}
fn array_length<'a>(a: Array<'a>, b: i64) -> Result<Option<i32>, EvalError> {
    let i = match usize::try_from(b) {
        Ok(0) | Err(_) => return Ok(None),
        Ok(n) => n - 1,
    };
    Ok(
        match a.dims().into_iter().nth(i) {
            None => None,
            Some(dim) => {
                Some(
                    dim
                        .length
                        .try_into()
                        .map_err(|_| EvalError::Int32OutOfRange(
                            dim.length.to_string().into(),
                        ))?,
                )
            }
        },
    )
}
